--- a/pages/account/edit-account.html
+++ b/pages/account/edit-account.html
@@ -538,7 +538,7 @@
                     <div class="card">
                         <div class="card-body d-flex flex-column align-items-center">
                             <div class="avatar mb-3">NN</div>
-                            <h5 class="card-title text-center">Xin chào <strong>Nguyễn Hữu Nam</strong></h5>
+                            <h5 class="card-title text-center fs-5">Nguyễn Hữu Nam</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             <a href="my-account.html" class="list-group-item active"><i
