--- a/pages/account/my-account.html
+++ b/pages/account/my-account.html
@@ -539,7 +539,7 @@
                             <div class="avatar mb-3">
                                 NN
                             </div>
-                            <h5 href="" class="card-title text-center">Xin chào <strong>Nguyễn Hữu Nam</strong></h5>
+                            <h5 href="" class="card-title text-center fs-5">Nguyễn Hữu Nam</h5>
                         </div>
                         <ul class="list-group list-group-flush">
                             <a href="my-account.html" class="list-group-item active"><i
