--- a/pages/products/products.html
+++ b/pages/products/products.html
@@ -777,7 +777,7 @@
 
     // Hàm tải dữ liệu từ file JSON
     function loadProducts() {
-        fetch('../../data/short_products.json')
+        fetch('../../data/products_v2.json')
             .then(response => response.json())
             .then(data => {
                 products = data;
@@ -799,28 +799,31 @@
 
         productsToDisplay.forEach(product => {
             const productCard = `
-                <div class="col">
-                    <div class="card h-100 shadow-sm">
-                        <img src="${product.image}" class="card-img-top" alt="${product.name}">
-                        <div class="card-body d-flex flex-column">
-                            <div class="d-flex justify-content-between align-items-start mb-2">
-                                <h5 class="card-title mb-0">${product.name}</h5>
-                                <span class="badge bg-secondary">${product.name}</span>
-                            </div>
-                            <p class="text-danger fw-bold mb-1">${product.price_new} <del class="text-muted">${product.price_old}</del></p>
-                            <p class="small text-muted">Ngày ra mắt: 15/03/2024</p>
-                            <p class="card-text mb-3">${product.description}</p>
-                            <div class="d-flex justify-content-between align-items-center mt-auto">
-                                <a href="${product.link}" class="btn btn-primary text-black">
-                                    <i class="bi bi-cart-plus"></i> Thêm vào giỏ
-                                </a>
-                                <button class="btn btn-outline-secondary">
-                                    <i class="bi bi-bookmark-heart"></i>
-                                </button>
-                            </div>
-                        </div>
+                  <div class="col">
+            <div class="card h-100 shadow-sm">
+                <img src="../../assets/images/products/products_images/${product.image}" class="card-img-top" alt="${product.name}">
+                <div class="card-body d-flex flex-column">
+                    <div class="d-flex justify-content-between align-items-start mb-2">
+                        <h5 class="card-title mb-0">${product.name}</h5>
+                        <span class="badge bg-secondary">${product.average_rating}⭐</span>
+                    </div>
+                    <p class="text-danger fw-bold mb-1">${product.price_new.toLocaleString()}₫ <del class="text-muted">${product.price_old.toLocaleString()}₫</del></p>
+                    <p class="small text-muted">Số lượt xem: ${product.total_views}</p>
+                    <p class="card-text mb-3">${product.description}</p>
+                    <div class="d-flex justify-content-between align-items-center mt-auto">
+                        <a href="${product.link}" class="btn btn-primary text-black">
+                            <i class="bi bi-cart-plus"></i> 
+                        </a>
+                         <a href="product-detail.html" class="btn btn-info text-white">
+                                <i class="bi bi-eye"></i> Xem chi tiết
+                            </a>
+                        <button class="btn btn-outline-secondary">
+                            <i class="bi bi-bookmark-heart"></i>
+                        </button>
                     </div>
                 </div>
+            </div>
+        </div>
                 `;
             productList.innerHTML += productCard;
         });
