fix admin pages

--- a/admin/dashboard/categories.html
+++ b/admin/dashboard/categories.html
@@ -247,7 +247,7 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a href="vouchers.html" class="sidebar-link">
+                <a href="categories.html" class="sidebar-link">
                     <i class="bi bi-collection"></i>
                     <span>Quản lý danh mục</span>
                 </a>
