update admin pages js

--- a/admin/dashboard/vouchers.html
+++ b/admin/dashboard/vouchers.html
@@ -372,7 +372,7 @@
         </div>
 
 
-        <div id="VoucherDetailModal" class="modal fade" tabindex="-1" role="dialog">
+        <div id="voucherDetailModal" class="modal fade" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
