update total views in product detail

--- a/pages/products/product-detail.html
+++ b/pages/products/product-detail.html
@@ -569,6 +569,8 @@
                         <span class="text-decoration-line-through text-muted">99,900,000đ</span>
                         <span class="badge bg-danger">(-7%)</span>
                     </p>
+                    <p>Số lượng xem: 1239</p>
+                    <p>Còn lại: 12</p>
                 </div>
 
                 <div class="rating-summary">
@@ -584,7 +586,7 @@
                 <div style="display: flex;gap: 100px;">
                     <!-- Màu sắc -->
                     <div>
-                        <label for="colorSelect" class="form-label">Màu sắc:</label>
+                        <label  class="form-label">Màu sắc:</label>
                         <div>
                                     <span class="color-swatch bg-black me-2"
                                           data-image="../../assets/images/products/color1.jpg"></span>
@@ -632,7 +634,6 @@
             </div>
         </div>
 
-    </div>
     </div>
 
     <div class="tab-container">
