update navigation and remove button config in navbar

--- a/admin/dashboard/categories.html
+++ b/admin/dashboard/categories.html
@@ -253,25 +253,20 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a href="config.html" class="sidebar-link">
+                <a href="profile.html" class="sidebar-link">
                     <i class="bi bi-person"></i>
                     <span>Thông tin cá nhân</span>
                 </a>
             </li>
-            <li class="sidebar-item">
-                <a href="config.html" class="sidebar-link">
-                    <i class="bi bi-gear"></i>
-                    <span>Cấu hình</span>
-                </a>
-            </li>
-
-        </ul>
-        <div class="sidebar-footer">
+         
+        <li class="sidebar-footer">
             <a href="#" class="sidebar-link">
                 <i class="bi bi-box-arrow-left"></i>
                 <span>Đăng xuất</span>
             </a>
-        </div>
+        </li>
+
+        </ul>
     </aside>
     <div class="main">
 
