--- a/admin/dashboard/index.html
+++ b/admin/dashboard/index.html
@@ -244,17 +244,12 @@
                 </a>
             </li>
             <li class="sidebar-item">
-                <a href="config.html" class="sidebar-link">
+                <a href="profile.html" class="sidebar-link">
                     <i class="bi bi-person"></i>
                     <span>Thông tin cá nhân</span>
                 </a>
             </li>
-            <li class="sidebar-item">
-                <a href="config.html" class="sidebar-link">
-                    <i class="bi bi-gear"></i>
-                    <span>Cấu hình</span>
-                </a>
-            </li>
+        
 
         </ul>
         <div class="sidebar-footer">
