--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -966,7 +966,7 @@
                 <div class="product-divider"></div>
                 <div class="total-price">
                     <p>TẠM TÍNH</p>
-                    <p id="total-price" style="text-align: right;font-size: 20px">19.980.000 VND</p>
+                    <p id="total-price" style="text-align: right;font-size: 20px">18.980.000 VND</p>
                 </div>
                 <a href="checkout.html">
                     <button type="submit" class="payment-button">TIẾP TỤC THANH TOÁN</button>
@@ -1134,13 +1134,13 @@
             src: "https://i.ebayimg.com/images/g/~t8AAOSwLf9gbius/s-l1600.webp",
             alt: "Slide 1",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         },
         {
             src: "https://i.ebayimg.com/images/g/~t8AAOSwLf9gbius/s-l1600.webp",
             alt: "Slide 2",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         },
         {
             src: "https://i.ebayimg.com/images/g/~t8AAOSwLf9gbius/s-l1600.webp",
@@ -1152,25 +1152,25 @@
             src: "https://i.ebayimg.com/images/g/~t8AAOSwLf9gbius/s-l1600.webp",
             alt: "Slide 4",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         },
         {
             src: "https://i.ebayimg.com/images/g/KDkAAOSw-MtnNqwA/s-l1600.webp",
             alt: "Slide 5",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         },
         {
             src: "https://i.ebayimg.com/images/g/KDkAAOSw-MtnNqwA/s-l1600.webp",
             alt: "Slide 6",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         },
         {
             src: "https://i.ebayimg.com/images/g/KDkAAOSw-MtnNqwA/s-l1600.webp",
             alt: "Slide 7",
             name: "Vic Firth American Classic Drum Stick 7A-DCP",
-            price: "$50"
+            price: "500.000 VNĐ"
         }
     ];
 
